--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,17 +1,32 @@
 {
   "name": "@retro-board/client",
-  "version": "0.1.0",
+  "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.5.1",
+    "@retro-board/common": "^0.0.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "chart.js": "^2.9.3",
+    "formik": "^2.2.8",
+    "node-sass": "^5.0.0",
+    "normalizr": "^3.6.1",
     "react": "^17.0.2",
+    "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1"
+    "react-textarea-autosize": "^8.3.3",
+    "redux-saga": "^1.1.3",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.3",
+    "socket.io-client": "^4.1.2",
+    "web-vitals": "^1.0.1",
+    "yup": "^0.32.9"
   },
   "scripts": {
     "start": "react-scripts start",
