--- a/packages/common/tsconfig.json
+++ b/packages/common/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "composite": true,
     "rootDir": "src",
-    "outDir": "build"
-  },
-  "references": [{ "path": "../common" }]
+    "outDir": "build",
+    "declaration": true
+  }
 }
