--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "pre-commit": "yarn format && yarn lint"
   },
   "devDependencies": {
+    "@commitlint/cli": "^12.1.4",
+    "@commitlint/config-conventional": "^12.1.4",
     "@types/jest": "^26.0.15",
     "@types/node": "^15.12.4",
     "@typescript-eslint/eslint-plugin": "^4.28.3",
@@ -35,5 +37,10 @@
     "commitizen": {
       "path": "cz-conventional-changelog"
     }
+  },
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ]
   }
 }
