--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "build": "lerna run build --stream",
     "lint": "eslint packages/* --ext .js,.jsx,.ts,.tsx",
     "format": "prettier --config --write .prettierrc '**/*.{js,jsx,ts,tsx}'",
-    "prepare": "husky install",
-    "pre-commit": "yarn format && yarn lint"
+    "prepare": "husky install"
   },
   "devDependencies": {
     "@commitlint/cli": "^12.1.4",
@@ -29,6 +28,7 @@
     "husky": "^7.0.0",
     "jest": "26.6.0",
     "lerna": "^4.0.0",
+    "lint-staged": "^11.0.1",
     "prettier": "^2.3.2",
     "ts-node": "^10.1.0",
     "typescript": "^4.3.5"
@@ -41,6 +41,12 @@
   "commitlint": {
     "extends": [
       "@commitlint/config-conventional"
+    ]
+  },
+  "lint-staged": {
+    "**/*.{js,jsx,ts,tsx}": [
+      "yarn format",
+      "yarn lint"
     ]
   }
 }
