--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "lint-staged": "^11.0.1",
     "prettier": "^2.3.2",
     "ts-node": "^10.1.0",
-    "typescript": "^4.3.5"
+    "typescript": "^4.3.5",
+    "lodash": "^4.17.21"
   },
   "config": {
     "commitizen": {
