--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,15 +12,16 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [14.x]
-
     steps:
       - name: Checkout
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
+
+      - name: Use Node.js latest
+        uses: actions/setup-node@v2
+        with:
+          node-version: '*'
 
       - name: Get yarn cache directory path
         id: yarn-cache-dir-path
@@ -35,11 +36,6 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-yarn-
 
-      - name: Build node version ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
-        with:
-          node-version: ${{ matrix.node-version }}
-
-      - run: yarn --prefer-offline
+      - run: yarn --frozen-lockfile
       - run: yarn --silent lerna changed
       - run: yarn lerna run build --since --stream
