ci: run lint and prettier scripts

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,5 +37,6 @@ jobs:
             ${{ runner.os }}-yarn-
 
       - run: yarn --frozen-lockfile
+      - run: yarn format && yarn lint
       - run: yarn --silent lerna changed
       - run: yarn lerna run build --since --stream
