--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@retro-board/client",
-  "version": "0.1.3",
+  "version": "0.2.0",
   "dependencies": {
     "@reduxjs/toolkit": "^1.5.1",
-    "@retro-board/common": "^0.1.1",
+    "@retro-board/common": "^0.2.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -28,9 +28,9 @@
     "yup": "^0.32.9"
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.1.8",
+    "@types/chart.js": "^2.9.34",
     "@types/react-beautiful-dnd": "^10.1.4",
-    "@types/chart.js": "^2.9.34"
+    "@types/react-router-dom": "^5.1.8"
   },
   "scripts": {
     "start": "react-scripts start",
