--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-yarn-
 
-      - run: yarn --frozen-lockfile
+      - run: yarn install
       - run: yarn format && yarn lint
       - run: yarn --silent lerna changed
       - run: yarn lerna run build --since --stream
