--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,4 +39,5 @@ jobs:
       - run: yarn install
       - run: yarn format && yarn lint
       - run: yarn --silent lerna changed
+      - run: yarn lerna run --scope=@retro-board/common build
       - run: yarn lerna run build --since --stream
