--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Use Node.js latest
         uses: actions/setup-node@v2
         with:
-          node-version: '*'
+          node-version: '14'
 
       - name: Get yarn cache directory path
         id: yarn-cache-dir-path
