ci: run unit tests for changed packages

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,3 +41,4 @@ jobs:
       - run: yarn --silent lerna changed
       - run: yarn lerna run --scope=@retro-board/common build
       - run: yarn lerna run build --since --stream
+      - run: yarn lerna run test --since --stream
